2005-12-10      Gaius Mulley <gaius@glam.ac.uk>

	* fixed Copyright in gm2/gm2-libs-pim library modules
	* gm2/gm2-compiler/M2Quads.mod:BuildForToByDo allowed Z type by value.
	* gm2/gm2-compiler/M2Quads.mod:BuildPseudoBy converted by value if type
	  is known.
	* fixes a bug reported by: James V. Cox example given in
	  testsuite/gm2/pim/run/pass/EnumTest.mod

2005-12-10      Gaius Mulley <gaius@glam.ac.uk>

	* fixed Copyright in gm2/gm2-libs-pim library modules

2005-12-06      Gaius Mulley <gaius@glam.ac.uk>

	* fixed Copyright in University of Ulm modules and also p2c.
	* heavily tidied up the p2c source tree.

2005-12-05      Peter P. Eiserloh <peter@eiserloh.org>

	* contributed the gm2 manual page and associated Makefile
	  in the new subdirectory: gm2/man.
	
2005-11-29	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug reported by John Wallace and Juan Reyes
	  concerning FOR loops with negative step values.
	* added new runtime regression tests gm2/pim/run/pass/For[78].mod
	  to test these new changes.
	* changes to gm2/gm2-compiler/M2Base.mod, gm2-compiler/M2Code.mod,
          gm2/gm2-compiler/M2GenGCC.mod, gm2/gm2-compiler/M2Quads.mod
	  to ensure that the Negate operator works on large data types
	  LONGCARD contants are changed into LONGINT and overflow is
	  checked.

2005-11-22	Gaius Mulley <gaius@glam.ac.uk>

	* modified ppg to take an extra parameter -f which emits the
	  Free Documentation License header when producing texinfo
	  ebnf rules.
	* fixed many dates on source files.

2005-11-21	Gaius Mulley <gaius@glam.ac.uk>

	* fixed many Copyright dates and GPL, LGPL and FDL license
	  issues.
	* replaced gm2/ulm-lib-gm2/std/Storage.mod with an implementation
	  which uses malloc and free. This in turn fixes a runtime regression
	  test (hello world) now works with the Ulm libraries.
	* fixed gm2/gm2.texi to include FDL notice and also fixed all
	  included texi files in the same way.
	* added GPL, Modula-2 and Copyright notices to all gm2/tools-src